# Churn

./: .gitignore  00_README.md  01_Preparacion_Clasificacion_Churn.ipynb  02_Regresion_Logistica_Churn.ipynb  03_Random_Forest_Churn.ipynb  04_Evaluacion_modelos.ipynb  README.md  preparar_predecir_cancelaciones.ipynb  pyproject.toml
datasets/: telco_Prep.csv  telco_Prue.csv
modelos/clasificacion/: RForest_base_bal.pkl  RForest_base_unbal.pkl  RForest_recall_bal.pkl  RForest_recall_unbal.pkl  lr_lbfgs_base.pkl  lr_lbfgs_base_none.pkl  lr_lbfgs_opt_balanced.pkl  lr_lbfgs_opt_none.pkl  lr_lbfgs_oversampling.pkl  lr_liblinear_base.pkl  lr_liblinear_base_none.pkl  lr_liblinear_opt_balanced.pkl  lr_liblinear_opt_none.pkl  lr_liblinear_oversampling.pkl  lr_saga_base.pkl  lr_saga_base_none.pkl  lr_saga_opt_balanced.pkl  lr_saga_opt_none.pkl  lr_saga_oversampling.pkl
modelos/scaler/: minmaxFull_Telco.pkl
